--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE HTML>
+<html>
+    <head>
+        <title>Challenge: Write a Poem</title>
+        <meta charset="utf-8">
+    </head>
+    <body>
+    <h1>Chungus the living Fungus</h1>
+    <p>Once there was a chungus<br> it smelt like a fungus<br> i think it was chungus the living fungus</p>
+    </body>
+</html>
