--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>Challenge: Write a Poem</title>
-        <meta charset="utf-8">
-    </head>
-    <body>
-    <h1>Chungus the living Fungus</h1>
-    <p>Once there was a chungus<br> it smelt like a fungus<br> i think it was chungus the living fungus</p>
+        <body>
+            <p>We are sorry to inform that this web page has not been developed yet</p>
+            <p>This site should be ready by <br> 30th Oct 2020</p>
     </body>
 </html>
