--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE HTML>
 <html>
     <head>
+        <style>
+            p{
+                text-allign:center;
+            }
+        </style>
         <body>
             <p>We are sorry to inform that this web page has not been developed yet</p>
             <p>This site should be ready by <br> 30th Oct 2020</p>
     </body>
-</html>
+    
+        </html>
