--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <style>
             p{
-                text-allign:center;
+                text-align:center;
             }
         </style>
         <body>
