--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
             p{
                 text-align:center;
             }
-        </style>
+        </style></head>
         <body>
             <p>We are sorry to inform that this web page has not been developed yet</p>
             <p>This site should be ready by <br> 30th Oct 2020</p>
