--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html>
     <head>
         <style>
-            p{
-                text-align:center;
+            body{
+            background-color:rgb(255, 26, 140);
             }
-        </style></head>
-        <body>
-            <p>We are sorry to inform that this web page has not been developed yet</p>
-            <p>This site should be ready by <br> 30th Oct 2020</p>
+        </style>
+    </head>
+    <body>
     </body>
     
-        </html>
+</html>
