--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             body{
             background-color:rgb(255, 26, 140);
             }
-            #Main-Title{
+            #Main-title{
             font-size:25px;
             font-family:cursive , sans-serif;
             color:white;
