--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             }
             #Main-title{
             font-size:50px;
-            font-family:cursive , sans-serif;
+            font-family:Freestyle Script , cursive;
             color:white;
             text-align:center;    
             }
